moved the import of the bootstrap dropdown with checkboxes to the component that uses it

--- a/custom-elements/filter-box.html
+++ b/custom-elements/filter-box.html
@@ -1,4 +1,6 @@
 <link href="../bower_components/polymer/polymer.html" rel="import">
+<!--Bootstrap Dropdown Checkbox-->
+<link rel="stylesheet" href="../lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.css">
 <!--id - name of the custom component-->
 <dom-module id="filter-box">
 	<style>
