input filters are nw correctle created

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<div class="starter-template col-sm-12 col-md-2">
 			<button>Show/Hide filters</button>
-			<filter-box filters="json/filters.json" type="checkboxes"></filter-box>
+			<filter-box filters="json/filters.json" type="input"></filter-box>
 		</div>
 	</div>
 
