--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-sm-12 col-md-10">
 			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-			min_radius=5 max_radius=15 markers='./json/markers.json' background_color="#666666"></vector-map>
+			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
 		</div>
 
 		<div class="starter-template col-sm-12 col-md-2">
 			<button>Show/Hide filters</button>
-			<filter-box filters="json/filters.json" type="input"></filter-box>
+			<filter-box filters="./tests/json/test-filters.json" type="input"></filter-box>
 		</div>
 	</div>
 
