--- a/custom-elements/filter-box.html
+++ b/custom-elements/filter-box.html
@@ -1,11 +1,13 @@
 <link href="../bower_components/polymer/polymer.html" rel="import">
+<!--Bootstrap Dropdown Checkbox-->
+<link rel="stylesheet" href="../lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.css">
+<script type="text/javascript" src="../lib/bootstrap-dropdown-checkbox/bootstrap-dropdown-checkbox.js"></script>
 <!--id - name of the custom component-->
 <dom-module id="filter-box">
 	<style>
 	</style>
 	<template>
 		<h3>Filters</h3>
-
 	</template>
 </dom-module>
 <script type="text/javascript">
