--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		head {
 			height: 100%;
 		}
+
 		#my_map {
 			position: absolute;
 			height: 600px;
@@ -47,21 +48,13 @@
 <body>
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-sm-12 col-md-10">
-			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
+			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478" min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
 		</div>
 
 		<div class="starter-template col-sm-12 col-md-2">
-			<button>Show/Hide filters</button>
 			<filter-box filters="./tests/json/test-filters.json" type="input"></filter-box>
 		</div>
 	</div>
-
-	<script>
-		$("button").click(function() {
-			$("filter-box").slideToggle("slow");
-		});
-	</script>
 </body>
 
 </html>
