--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
 <body>
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-sm-12 col-md-10">
-			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478" min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
+			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
+			min_radius=5 max_radius=15 countries='./tests/json/test-countries.json' background_color="#666666"></vector-map>
 		</div>
 		<div class="starter-template col-sm-12 col-md-2">
-			<filter-box filters="./tests/json/test-filters.json" type="input"></filter-box>
+			<filter-box filters="./tests/json/test-filters.json" type="input" map="my_map"></filter-box>
 		</div>
 	</div>
 </body>
