--- a/custom-elements/vector-map.html
+++ b/custom-elements/vector-map.html
@@ -30,13 +30,17 @@
 			// attr containing the json file with the markers and countries
 			var vMap = this;
 			var jsonFile = this.countries;
+			var id = this.id;
+			if(!id)
+				return console.error('You must input an id to be associated with the map!');
+
 			if(this.markers)
 				jsonFile = this.markers;
 
 
 			// check if all the mandatory fields are present
 			if (!jsonFile)
-				return console.error('You must input a JSON with the markers');
+				return console.error('You must input a json file!');
 
 			// get the json file (Ajax request)
 			$.when($.getJSON(jsonFile)).then(function(jsonFile) {
@@ -54,7 +58,7 @@
 
 				// create a new VectorialMap
 				vectorMap = new VectorialMap();
-				vectorMap.createMap(jsonFile, minRadius, maxRadius, vMap.id, minColor, maxColor, mapType, backgroundColor, dataType);
+				vectorMap.createMap(jsonFile, minRadius, maxRadius, vMap.id, minColor, maxColor, mapType, backgroundColor, dataType, id);
 			});
 		},
 		properties: {
