--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
 		</div>
 		<div class="starter-template col-sm-12 col-md-2">
-			<filter-box filters="./tests/json/test-filters.json" type="input" map="my_map"></filter-box>
+			<filter-box id="my-fbox" filters="./tests/json/test-filters.json" type="input" map="my_map"></filter-box>
 		</div>
 	</div>
 </body>
