--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 	<script src="lib/jvectormap/jquery-jvectormap-2.0.2.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-	<!--Load all the maps-->
-	<script type="text/javascript" src="finalJs/maps.js"></script>
-	<!--Load all the necessary scripts-->
+	<!-- jsMapsApi -->
 	<script type="text/javascript" src="./finalJs/jsMapsApi.js"></script>
 
 
@@ -49,7 +47,7 @@
 	<div class="container-fluid" style="margin-top:10px">
 		<div class="starter-template col-sm-12 col-md-10">
 			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
+			min_radius=5 max_radius=15 countries='./tests/json/test-countries.json' background_color="#666666"></vector-map>
 		</div>
 		<div class="starter-template col-sm-12 col-md-2">
 			<filter-box id="my-fbox" filters="./tests/json/test-filters.json" type="input" map="my_map"></filter-box>
