--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 	<link rel="import" href="custom-elements/filter-box.html">
 
 	<style media="screen">
-		head {
-			height: 100%;
+		html, body{
+			height:100%;
+			margin: 0px;
+			padding: 0px;
 		}
 
 		#my_map {
-			position: absolute;
-			height: 600px;
+			height: 100%;
 			width: 100%;
 		}
 	</style>
@@ -44,10 +45,10 @@
 
 
 <body>
-	<div class="container-fluid" style="margin-top:10px">
-		<div class="starter-template col-sm-12 col-md-10">
+	<div class="container-fluid" style="margin-top:10px; height:100%">
+		<div class="starter-template col-sm-12 col-md-10" style="height:100%">
 			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-			min_radius=5 max_radius=15 countries='./tests/json/test-countries.json' background_color="#666666"></vector-map>
+			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
 		</div>
 		<div class="starter-template col-sm-12 col-md-2">
 			<filter-box id="my-fbox" filters="./tests/json/test-filters.json" type="input" map="my_map"></filter-box>
