--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 	<!-- jsMapsApi -->
 	<script type="text/javascript" src="./finalJs/jsMapsApi.js"></script>
 
-
 	<!--Polymer-->
 	<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 
@@ -49,7 +48,8 @@
 	<div class="container-fluid" style="margin-top:10px; height:100%">
 		<div class="starter-template col-sm-12 col-md-10" style="height:100%">
 			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json' background_color="#666666"></vector-map>
+			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json'
+			background_color="#666666"></vector-map>
 		</div>
 		<div class="starter-template col-sm-12 col-md-2">
 			<filter-box id="my-fbox" filters="./tests/json/test-filters.json" type="input" map="my_map"></filter-box>
