--- a/indexCountries.html
+++ b/indexCountries.html
@@ -48,7 +48,7 @@
 	<div class="container-fluid" style="margin-top:10px; height:100%">
 		<div class="starter-template col-sm-12 col-md-10" style="height:100%">
 			<vector-map id="my_map" map_type='world_mill_en' min_color='#2cb5d4' max_color="#153478"
-			min_radius=5 max_radius=15 markers='./tests/json/test-markers.json'
+			min_radius=5 max_radius=15 countries='./tests/json/test-countries.json'
 			background_color="#666666"></vector-map>
 		</div>
 		<div class="starter-template col-sm-12 col-md-2">
