renamed finalJs dir to dist

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 	<!-- jsMapsApi -->
-	<script type="text/javascript" src="./finalJs/jsMapsApi.js"></script>
+	<script type="text/javascript" src="./dist/jsMapsApi.js"></script>
 
 
 	<!--Polymer-->
